--- a/about.html
+++ b/about.html
@@ -52,8 +52,9 @@
     </div>
 
     <div id="action_buttons">
-        <button id="license_terms" class="action-button button">License Terms</button>
         <button id="donate" class="action-button button">Donate</button>
+        <button id="license_terms" class="action-button button">License Terms</button>
+        <button id="check_for_updates" class="action-button button">Check for Updates</button>
         <button id="feedback" class="action-button button">Feedback</button>
         <button id="close" class="action-button button">Close</button>
     </div>
