--- a/about.html
+++ b/about.html
@@ -33,6 +33,9 @@
                 <a href="https://www.npmjs.com/package/bignumber.js" class="link">bignumber.js</a>
             </li>
             <li>
+                <a href="https://www.npmjs.com/package/chart.js" class="link">chart.js</a>
+            </li>
+            <li>
                 <a href="https://www.npmjs.com/package/esprima" class="link">esprima</a>
             </li>
             <li>
