--- a/license_terms.html
+++ b/license_terms.html
@@ -126,7 +126,9 @@
         <input type="radio" id="reject" value="reject" name="radio_button_group" checked /><span>I reject these terms</span><br/>
         <input type="radio" id="accept" value="accept" name="radio_button_group" /><span>I accept these terms</span><br/>
 
-        <button id="ok" class="action-button button">OK</button>
+        <div id="action_buttons">
+            <button id="ok" class="action-button button">OK</button>
+        </div>
     </div>
 
     <script src="src/license_terms.js"></script>
