--- a/settings_ui.html
+++ b/settings_ui.html
@@ -36,6 +36,13 @@
             </td>
             <td>Must be a whole number greater than 0</td>
         </tr>
+        <tr>
+            <td>Check for Updates</td>
+            <td>
+                <input type="checkbox" id="check_for_updates"></input>
+            </td>
+            <td>Check for updated app version on each launch</td>
+        </tr>
     </tbody>
 </table>
 
