--- a/settings_ui.html
+++ b/settings_ui.html
@@ -41,7 +41,7 @@
             <td>
                 <input type="checkbox" id="check_for_updates"></input>
             </td>
-            <td>Check for updated app version on each launch</td>
+            <td>Automatically check for updated app version</td>
         </tr>
     </tbody>
 </table>
