--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
             <div class="category-row">
                 <label id="category_label" for="category" title="Category:">Category:</label>
                 <select id="category" class="select-category"></select>
+                <span id="mode_indicator"></span>
             </div>
             <table border="0" cellpadding="0" class="custom_buttons_table">
                 <tr>
