--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <div>
         <p>
-            EBTCalc is a Reverse Polish Notation (RPN) calculator for Windows, OSX, and Linux. EBTCalc users can create
+            EBTCalc is a Reverse Polish Notation (RPN) calculator for Windows and Linux. EBTCalc users can create
             custom buttons, programmed in Javascript, using a convenient editor. EBTCalc is open source.
         </p>
     </div>
