--- a/edit.html
+++ b/edit.html
@@ -32,7 +32,7 @@
     <label for="select_function" id="select_function_label">Function:</label><select id="select_function"></select>
   </span>
 </div>
-<textarea id="source_code" class="source-code"></textarea>
+<textarea id="source_code" class="source-code" spellcheck="false"></textarea>
 <div id="bottom_content">
     <span id="cursor_position_and_errors">
         <span id="cursor_position_container">
