--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <p id="app_and_version"></p>
-        <p>&#169; Copyright 2020, Eric Bergman-Terrell</p>
+        <p>&#169; Copyright 2021, Eric Bergman-Terrell</p>
         <a id="website_link" class="link"></a>
     </div>
 
@@ -47,6 +47,9 @@
         </ul>
         <p>
             App icon by <a href="https://en.wikipedia.org/wiki/Everaldo_Coelho" class="link">Everaldo Coelho</a>
+        </p>
+        <p>
+            Other artwork by Benoit Rochon
         </p>
     </div>
 
