Replaced table attributes with CSS styles

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <ul id="stack" class="stack">
                 </ul>
             </div>
-            <table border="0" cellpadding="0" class="table-column-1">
+            <table class="table-column-1">
                 <tr>
                     <td>
                         <!-- predefined buttons -->
-                        <table border="0" cellpadding="0" class="table-predefined-buttons">
+                        <table class="table-predefined-buttons">
                             <tr>
                                 <td>
                                     <button id="drop" class="predefined-wide-button">Drop</button>
@@ -94,10 +94,10 @@
                                 </td>
                             </tr>
                         </table>
-                        <table border="0" cellpadding="0">
+                        <table>
                             <tr>
                                 <td>
-                                    <table border="0" cellpadding="0">
+                                    <table>
                                         <tr>
                                             <td>
                                                 <button id="button_7" class="predefined-button">7</button>
@@ -207,15 +207,15 @@
                 <select id="category" class="select-category"></select>
                 <span id="mode_indicator"></span>
             </div>
-            <table border="0" cellpadding="0" class="custom_buttons_table">
+            <table class="custom_buttons_table">
                 <tr>
                     <td>
                     </td>
-                    <td class="category-and-function-buttons-td" valign="top" align="left">
+                    <td class="category-and-function-buttons-td">
                         <!-- column 2 -->
                         <div class="category-and-function-buttons">
                             <div class="function-button-div">
-                                <table border="0" id="function_buttons" class="function-table">
+                                <table id="function_buttons" class="function-table">
                                 </table>
                             </div>
                         </div>
