--- a/prompt.html
+++ b/prompt.html
@@ -8,7 +8,7 @@
 <body>
 <label for="textbox" id="prompt_label"></label>
 <input type="text" id="textbox" />
-<table border="0" id="button_table">
+<table id="button_table">
     <tr>
         <td>
             <button id="ok" class="button">OK</button>
