--- a/variable.html
+++ b/variable.html
@@ -18,7 +18,7 @@
         <input type="text" id="textbox" style="display: none;" />
     </div>
 </div>
-<table border="0" id="button_table">
+<table id="button_table">
     <tr>
         <td>
             <button id="ok" class="button">OK</button>
