--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                 <a href="https://www.npmjs.com/package/chart.js" class="link">chart.js</a>
             </li>
             <li>
-                <a href="https://www.npmjs.com/package/esprima" class="link">esprima</a>
+                <a href="https://www.npmjs.com/package/espree" class="link">espree</a>
             </li>
             <li>
                 <a href="https://www.npmjs.com/package/prettier" class="link">prettier</a>
