--- a/license_terms.html
+++ b/license_terms.html
@@ -123,8 +123,11 @@
 
     <div id="decision">
         <p>Your Decision:</p>
-        <input type="radio" id="reject" value="reject" name="radio_button_group" checked /><span>I reject these terms</span><br/>
-        <input type="radio" id="accept" value="accept" name="radio_button_group" /><span>I accept these terms</span><br/>
+        <input type="radio" id="reject" value="reject" name="radio_button_group" checked />
+        <label for="reject">I reject these terms</label><br/>
+
+        <input type="radio" id="accept" value="accept" name="radio_button_group" />
+        <label for="accept">I accept these terms</label><br/>
 
         <div id="action_buttons">
             <button id="ok" class="action-button button">OK</button>
