--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:width="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="index.css" rel="stylesheet" type="text/css">
-    <meta charset="UTF-8">
+    <link href="common.css" rel="stylesheet" type="text/css"/>
+    <link href="index.css" rel="stylesheet" type="text/css"/>
+    <meta charset="UTF-8"/>
     <title id="title"></title>
 </head>
 <body>
