--- a/license_terms.html
+++ b/license_terms.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="license_terms.css" rel="stylesheet" type="text/css">
-    <meta charset="UTF-8">
+    <link href="common.css" rel="stylesheet" type="text/css"/>
+    <link href="license_terms.css" rel="stylesheet" type="text/css"/>
+    <meta charset="UTF-8"/>
     <title>License Terms</title>
 </head>
 <body>
