--- a/log.html
+++ b/log.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="log.css" rel="stylesheet" type="text/css">
-    <meta charset="UTF-8">
+    <link href="common.css" rel="stylesheet" type="text/css"/>
+    <link href="log.css" rel="stylesheet" type="text/css"/>
+    <meta charset="UTF-8"/>
     <title>Log</title>
 </head>
 <body>
