--- a/variable.html
+++ b/variable.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:width="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="variable.css" rel="stylesheet" type="text/css">
-    <meta charset="UTF-8">
+    <link href="common.css" rel="stylesheet" type="text/css"/>
+    <link href="variable.css" rel="stylesheet" type="text/css"/>
+    <meta charset="UTF-8"/>
     <title id="title"></title>
 </head>
 <body>
@@ -10,12 +11,10 @@
 <div id="specify_variable">
     <div id="line_1">
         <input type="radio" id="dropdown_radio_button" value="dropdown" name="radio_button_group" checked="checked" style="display: none;" />
-        <select id="dropdown" style="display: none;">
-        </select>
+        <select id="dropdown" style="display: none;"></select>
     </div>
     <div id="line_2">
-        <input type="radio" id="text_radio_button" value="text" name="radio_button_group" style="display: none;" />
-        <input type="text" id="textbox" style="display: none;" />
+        <input type="radio" id="text_radio_button" value="text" name="radio_button_group" style="display: none;" /><input type="text" id="textbox" style="display: none;" />
     </div>
 </div>
 <table id="button_table">
