--- a/check_for_updates.html
+++ b/check_for_updates.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:width="http://www.w3.org/1999/xhtml">
 <head>
+    <link href="common.css" rel="stylesheet" type="text/css"/>
     <link href="check_for_updates.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <title id="title">Check for Updates</title>
