--- a/settings_ui.html
+++ b/settings_ui.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:width="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="settings_ui.css" rel="stylesheet" type="text/css">
-    <meta charset="UTF-8">
+    <link href="common.css" rel="stylesheet" type="text/css"/>
+    <link href="settings_ui.css" rel="stylesheet" type="text/css"/>
+    <meta charset="UTF-8"/>
     <title>Settings</title>
 </head>
 <body>
