CSS Fixes. Edit window fixes.

--- a/check_for_updates.html
+++ b/check_for_updates.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:width="http://www.w3.org/1999/xhtml">
+<html lang="en-US">
 <head>
     <link href="common.css" rel="stylesheet" type="text/css"/>
     <link href="check_for_updates.css" rel="stylesheet" type="text/css">
