--- a/settings_ui.html
+++ b/settings_ui.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:width="http://www.w3.org/1999/xhtml">
+<html lang="en-US">
 <head>
     <link href="common.css" rel="stylesheet" type="text/css"/>
     <link href="settings_ui.css" rel="stylesheet" type="text/css"/>
@@ -19,28 +19,28 @@
         <tr>
             <td>Decimal Point</td>
             <td>
-                <input type="text" id="decimal_point_character"></input>
+                <input type="text" id="decimal_point_character"/>
             </td>
             <td>Must not be a digit character, must differ from thousands separator</td>
         </tr>
         <tr>
             <td>Thousands Separator</td>
             <td>
-                <input type="text" id="thousands_separator"></input>
+                <input type="text" id="thousands_separator"/>
             </td>
             <td>Must not be a digit character, must differ from decimal point</td>
         </tr>
         <tr>
             <td>Tab Width</td>
             <td>
-                <input type="text" id="tab_width"></input>
+                <input type="text" id="tab_width"/>
             </td>
             <td>Must be a whole number greater than 0</td>
         </tr>
         <tr>
             <td>Check for Updates</td>
             <td>
-                <input type="checkbox" id="check_for_updates"></input>
+                <input type="checkbox" id="check_for_updates"/>
             </td>
             <td>Automatically check for updated app version</td>
         </tr>
