--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:width="http://www.w3.org/1999/xhtml">
+<html lang="en-US">
 <head>
     <link href="common.css" rel="stylesheet" type="text/css"/>
     <link href="index.css" rel="stylesheet" type="text/css"/>
@@ -232,7 +232,7 @@
         <span id="bottom_buttons">
                 <button id="edit" class="bottom-button">Edit</button>
                 <button id="cancel" class="bottom-button" disabled>Cancel</button>
-                <button id="settings" class="bottom-button">Settings</button>
+                <button id="settings" class="bottom-button">Settings...</button>
                 <button id="log" class="bottom-button">Log</button>
         </span>
 
