--- a/edit.html
+++ b/edit.html
@@ -47,7 +47,7 @@
             <span id="error_description"></span>
         </span>
 
-        <button id="go_to_error" class="button" disabled="false">Go to Error</button>
+        <button id="go_to_error" class="button" disabled>Go to Error</button>
     </span>
 
     <span id="action_buttons">
