--- a/settings_ui.html
+++ b/settings_ui.html
@@ -17,28 +17,28 @@
     </thead>
     <tbody>
         <tr>
-            <td>Decimal Point</td>
+            <td><label for="decimal_point_character">Decimal Point</label></td>
             <td>
                 <input type="text" id="decimal_point_character"/>
             </td>
             <td>Must not be a digit character, must differ from thousands separator</td>
         </tr>
         <tr>
-            <td>Thousands Separator</td>
+            <td><label for="thousands_separator">Thousands Separator</label></td>
             <td>
                 <input type="text" id="thousands_separator"/>
             </td>
             <td>Must not be a digit character, must differ from decimal point</td>
         </tr>
         <tr>
-            <td>Tab Width</td>
+            <td><label for="tab_width">Tab Width</label></td>
             <td>
                 <input type="text" id="tab_width"/>
             </td>
             <td>Must be a whole number greater than 0</td>
         </tr>
         <tr>
-            <td>Check for Updates</td>
+            <td><label for="check_for_updates">Check for Updates</label></td>
             <td>
                 <input type="checkbox" id="check_for_updates"/>
             </td>
